Fix for overflow on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 	display: grid;
 	min-height: 100vh;
 	line-height: 1;
-	grid-template: 10.5rem 1fr / min(25%, 18rem) 1fr;
+	grid-template: auto 1fr / 290px 1fr;
 	font-family: Roboto, sans-serif;
 }
 
@@ -132,7 +132,8 @@ header {
 	display: grid;
 	grid-template: 1fr 1fr / 1fr 23rem;
 	align-items: center;
-	padding: 0rem 3rem 0.5rem 2rem;
+	row-gap: 1rem;
+	padding: 0rem 3rem 1rem 2rem;
 	box-shadow: 0.1rem 0.2rem 0.2rem rgb(204, 195, 175);
 	font-weight: 600;
 }
